--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@
 git add .gitignore
 git commit --amend --no-edit
 
-#esse bendito n entra!!!!
+#esse bendito n entra!!!
 credentials.json
 token.json
